test/fails/bad_parsing/bad_function4.lgl
int int f() { //double types fail at parse time
    return 0;
}

void main() {
    return;
}